Refactor "How I Code" blog structure and streamline homepage links
Moved the "How I Code" content into a dedicated component for improved reusability and maintainability. Updated homepage by replacing existing blog links with the new component to simplify navigation and enhance the user experience.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -1,15 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import HowICodeContent from "../components/HowICodeContent.astro";
 ---
 
 <Layout>
     <main class="prose">
-        <h1 class="mb-4">Reflections on Tech</h1>
-        <ul>
-            <li><a rel="prefetch" href="/blog/how-i-code">How I Code</a></li>
-            <li>
-                <a rel="prefetch" href="/blog/local-first">The Local First Stack</a>
-            </li>
-        </ul>
+        <HowICodeContent />
     </main>
 </Layout>
