Add "title" attribute to Layout and refine language in "How I Code" blog
Enhanced the homepage layout by adding a `title` attribute to the `Layout` component for improved SEO and accessibility. Refined phrasing throughout the "How I Code" blog to adopt a more conversational and personal tone for better reader engagement.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import HowICodeContent from "../components/HowICodeContent.astro";
 ---
 
-<Layout>
+<Layout title="How I Code">
     <main class="prose">
         <HowICodeContent />
     </main>
