--- a/apps/ethang-astro/src/components/HowICodeContent.astro
+++ b/apps/ethang-astro/src/components/HowICodeContent.astro
@@ -4,6 +4,15 @@ import CodeBlock from "../components/CodeBlock.astro";
 import LocalImage from "../components/LocalImage.astro";
 import snippingTool from "../images/windows/snipping-tool.png";
 import greenshot from "../images/windows/greenshot.png";
+
+/*
+ * TODO add sections on:
+ * Why Cloudflare is best for development
+ * Storybook as a frontend testing framework
+ * Prisma as the best ORM, and why you should use ORMs
+ * Mention playwright as the best E2E tool
+ * Why you should use JetBrains IDE's over the trend chase text editors (Sublime - customization/themes, VS Code - plugins, Cursor - AI)
+*/
 ---
 
 <Fragment>
