Optimize word count calculation in "How I Code" blog
Simplified script logic by replacing manual child element iteration with direct usage of `innerHTML` for word count calculation, improving code efficiency and maintainability.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/components/HowICodeContent.astro
+++ b/apps/ethang-astro/src/components/HowICodeContent.astro
@@ -30,13 +30,7 @@ import greenshot from "../images/windows/greenshot.png";
     const mainElement = document.querySelector('main.prose');
 
     if (mainElement) {
-      const children = mainElement.children;
-      let contentHTML = '';
-      for (let i = 0; i < children.length; i++) {
-        contentHTML += children[i].outerHTML;
-      }
-
-      const wordCount = countWords(contentHTML);
+      const wordCount = countWords(mainElement.innerHTML);
       const readTimeMinutes = Math.ceil(wordCount / 225);
 
       const wordCountElement = document.querySelector('.word-count-display');
