--- a/apps/ethang-astro/src/components/HowICodeContent.astro
+++ b/apps/ethang-astro/src/components/HowICodeContent.astro
@@ -12,6 +12,7 @@ import greenshot from "../images/windows/greenshot.png";
  * Prisma as the best ORM, and why you should use ORMs
  * Mention playwright as the best E2E tool
  * Why you should use JetBrains IDE's over the trend chase text editors (Sublime - customization/themes, VS Code - plugins, Cursor - AI)
+ * Documentation should never be used to explain how to work on something. It should only ever be used to explain how to use something. If documentation is the only form of onboarding a team has, it suggests other problems. Every developer knows how to start a project and read code. But other teams may need a simple definition of APIs and schemas. Data contracts are many times more important than documentation. (Add if you follow everything above, testing, linting, etc. this is even more true as these will act as a true living documentation. It is impossible to do this via Jira or Google Docs, the term "living documentation" is being used incorrectly here, it is by definition dead.
 */
 ---
 
