Update fonts and improve blog styling consistency
Replaced Noto font families with Funnel Display and Funnel Sans for a refreshed and cohesive typography setup. Added a `select-none` class to the blog's unordered list for enhanced styling control. Updated Tailwind configuration to reflect font changes.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/components/HowICodeContent.astro
+++ b/apps/ethang-astro/src/components/HowICodeContent.astro
@@ -49,7 +49,7 @@ import greenshot from "../images/windows/greenshot.png";
         building web applications. All of these perspectives are based on real-world experience, mistakes, and problems
         fixed
         through consulting on projects in need of help.</p>
-    <ul>
+    <ul class="select-none">
         <li>
             <a href="#javaScriptIsNotAProgrammingLanguage">JavaScript Is Not a Programming Language</a>
             <ul>
