--- a/apps/ethang-astro/src/layouts/Layout.astro
+++ b/apps/ethang-astro/src/layouts/Layout.astro
@@ -33,18 +33,18 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
 <body>
 <div class="grid sm:grid-cols-[auto_1fr] gap-4">
     <div class="hidden sm:block border-r-2 min-h-screen select-none">
-        <h1 class="px-5 py-1 font-bold text-xl mt-4">EthanG</h1>
+        <h1 class="px-5 py-1 font-bold text-3xl mt-4">EthanG</h1>
         <nav class="grid gap-4" aria-label="Main">
             <ul class="menu menu-sm">
                 <li>
-                    <a rel="prefetch" href="/" class="link">Home</a>
+                    <a rel="prefetch" href="/" class="link text-base">Home</a>
                 </li>
                 <li>
-                    <a rel="prefetch" href="/courses" class="courseLink link"
+                    <a rel="prefetch" href="/courses" class="link text-base"
                     >Courses</a
                     >
                 </li>
-                <li><a class="link"
+                <li><a class="link text-base"
                        href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7316126013938143232"
                        target="_blank">Newsletter</a></li>
             </ul>
@@ -56,11 +56,11 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
                     <a
                             href="https://www.linkedin.com/in/ethan-glover/"
                             target="_blank"
-                            class="link">LinkedIn</a
+                            class="link text-base">LinkedIn</a
                     >
                 </li>
                 <li>
-                    <a href="https://github.com/eglove" target="_blank" class="link"
+                    <a href="https://github.com/eglove" target="_blank" class="link text-base"
                     >GitHub</a
                     >
                 </li>
@@ -68,28 +68,28 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
                     <a
                             href="https://frontendmasters.com/u/ethang/"
                             target="_blank"
-                            class="link">Frontend Masters</a
+                            class="link text-base">Frontend Masters</a
                     >
                 </li>
                 <li>
                     <a
                             href="https://www.credly.com/users/ethang"
                             target="_blank"
-                            class="link">Credly</a
+                            class="link text-base">Credly</a
                     >
                 </li>
                 <li>
                     <a
                             href="https://www.goodreads.com/user/show/6137062-ethan-glover"
                             target="_blank"
-                            class="link">Goodreads</a
+                            class="link text-base">Goodreads</a
                     >
                 </li>
                 <li>
                     <a
                             href="https://www.khanacademy.org/profile/ethanglover/badges"
                             target="_blank"
-                            class="link">Khan Academy</a
+                            class="link text-base">Khan Academy</a
                     >
                 </li>
             </ul>
@@ -102,14 +102,14 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
         <nav class="navbar-center flex" aria-label="Main">
             <ul class="menu menu-horizontal px-1">
                 <li>
-                    <a rel="prefetch" href="/" class="link">Home</a>
+                    <a rel="prefetch" href="/" class="link text-base">Home</a>
                 </li>
                 <li>
-                    <a rel="prefetch" href="/courses" class="courseLink link"
+                    <a rel="prefetch" href="/courses" class="link text-base"
                     >Courses</a
                     >
                 </li>
-                <li><a class="link"
+                <li><a class="link text-base"
                        href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7316126013938143232"
                        target="_blank">Newsletter</a></li>
             </ul>
