--- a/apps/ethang-astro/src/layouts/Layout.astro
+++ b/apps/ethang-astro/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import ClientRouter from 'astro/components/ClientRouter.astro';
+import { slide } from 'astro/virtual-modules/transitions.js';
+
 type Props = {
     title?: string;
     description?: string;
@@ -29,6 +32,7 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
     <meta name="generator" content={Astro.generator}/>
     <title>{pageTitle}</title>
     <meta name="description" content={pageDescription}/>
+    <ClientRouter />
 </head>
 <body>
 <div class="grid sm:grid-cols-[auto_1fr] gap-4">
@@ -115,7 +119,7 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
             </ul>
         </nav>
     </div>
-    <div id="main-content" class="m-4 sm:mx-0">
+    <div id="main-content" class="m-4 sm:mx-0" transition:animate="initial">
         <slot/>
     </div>
 </div>
