--- a/apps/ethang-astro/src/layouts/Layout.astro
+++ b/apps/ethang-astro/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
 ---
 
 <!doctype html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="dark" class="selection:bg-info selection:text-base-300">
 <head>
     <meta charset="utf8"/>
     <meta name="viewport" content="width=device-width"/>
